remove files from project